# blacklight

./: .cobertura.xml  .coverage  .coveragerc  .gitignore  Makefile  README.md  cobertura.xml  coverage.xml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Codacy_analysis_cli.yaml  publish.yml  test.yml
Documentation/doctrees/: index.doctree  src.populations.doctree
Documentation/html/: blacklight source.html  src.dataLoaders.html
Documentation/source/: conf.py
blacklight/: .coverage  __init__.py  utils.py
blacklight.egg-info/: PKG-INFO  SOURCES.txt
blacklight/autoML/: __init__.py  _feed_forward.py
blacklight/base/: __init__.py  chromosome.py  (+2 more)
docs/: blacklight.autoML.rst  blacklight.base.chromosomes.rst  blacklight.base.chromosomes.tests.rst  blacklight.base.individuals.rst  blacklight.base.individuals.tests.rst  blacklight.base.populations.rst  blacklight.base.rst  blacklight.base.utils.rst  blacklight.base.utils.tests.rst  blacklight.blacklightDataLoader.rst  blacklight.blacklightDataLoader.tests.data.rst  blacklight.blacklightDataLoader.tests.rst  blacklight.dataLoaders.tests.data.rst  blacklight.dataLoaders.tests.rst  blacklight.engine.adapters.rst  blacklight.engine.adapters.tests.rst  blacklight.engine.data.rst  blacklight.engine.data.tests.data.rst  blacklight.engine.tests.rst  blacklight.engine.utils.rst  blacklight.engine.utils.tests.rst  blacklight.genetic.base.rst  blacklight.genetic.chromosomes.rst  blacklight.genetic.individuals.tests.rst  blacklight.genetic.populations.rst  blacklight.populations.rst  blacklight.populations.tests.rst  blacklight.rst  conf.py  end_to_end_tests.data.rst  end_to_end_tests.rst  index.rst  model_classifier.rst  model_classifier.src.rst  modules.rst
end_to_end_tests/: iris_report.html  iris_report.json  output.json  profiler.py  test_feed_forward.ipynb
model_classifier/: openaigym_test.py
research/: blacklight_resesarch_paper.aux  blacklight_resesarch_paper.tex
src/: __init__.py  utils.py
test/: test_CI_CD.py
(+250 files in other folders)
