[tool.poetry]
name = "blacklight"
version = "0.1.6"
description = "A package to manage genetic deep learning dependencies in python."
authors = ["Cole Agard <ctagard19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "*"
pandas = "*"
tensorflow = {version = "*", markers = "platform_machine != 'arm64'"}

[tool.poetry.group.test.dependencies]
fastparquet = "*"
openpyxl = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
autopep8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
